fixed search button alignment for all media

--- a/layout/styles/custom.css
+++ b/layout/styles/custom.css
@@ -46,7 +46,7 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 
 
 #header #header-search{ display: inline-block; float: right; width: auto; clear: right; }
-#header #header-search { margin-top: 15px; }
+#header #header-search { margin-top: 21px; }
 
 /* #header #header-logo, #header #header-contact, #header #header-search { vertical-align: bottom; }
 */
